--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                         <span></span>
                     </div>
                 </div>
-                <div class="navbar-items" id="navMb">
-                    <ul class="navbar-item">
+                <div class="navbar-items" >
+                    <ul class="navbar-item" id="navMb">
                         <li class="nav-li">
                             <a href="javascript:void(0)"><span>00</span> Home</a>
                         </li>
